# shoggoth

./: .gitignore  README.md  cabal.project  hie.yaml  shoggoth.cabal
.github/workflows/: ci.yml
shoggoth/: Shoggoth.hs
shoggoth-agda/Shoggoth/: Agda.hs
shoggoth-hasmin/Shoggoth/CSS/: Minify.hs
shoggoth-hsass/Shoggoth/CSS/: Sass.hs
shoggoth/Development/: Shoggoth.hs
shoggoth/Development/Shake/: Extension.hs
shoggoth/Development/Shoggoth/: Extension.hs
shoggoth/Shoggoth/: Configuration.hs  Metadata.hs  PostInfo.hs  Prelude.hs  Routing.hs  TagSoup.hs  Template.hs
shoggoth/Shoggoth/Prelude/: ByteString.hs  FilePath.hs  Find.hs  Url.hs
shoggoth/Shoggoth/Template/: Metadata.hs  Pandoc.hs  TagSoup.hs  Template.hs
shoggoth/Shoggoth/Template/Pandoc/: Builder.hs  Citeproc.hs  Helper.hs  Postprocess.hs  Url.hs
workflows/: ci.yml
