cabal-version: 3.0
name:          shoggoth
version:       0.1
synopsis:      Build static web pages using
homepage:      https://github.com/wenkokke/shoggoth#README
bug-reports:   https://github.com/wenkokke/shoggoth/issues
license:
author:        Wen Kokke
maintainer:    wenkokke@users.noreply.github.com
copyright:     © 2016—2022 Wen Kokke
category:      Web
build-type:    Simple
tested-with:   GHC ==8.10.7

flag install-agda
  description: Install Agda using Cabal
  manual:      True
  default:     False

common language-haskell
  default-language:   Haskell2010
  build-depends:      base
  default-extensions:
    FlexibleContexts
    FlexibleInstances
    ImplicitParams
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    Strict
    TupleSections
    TypeApplications
    TypeSynonymInstances

library
  import:          language-haskell
  hs-source-dirs:  shoggoth shoggoth-agda shoggoth-hasmin shoggoth-hsass
  exposed-modules:
    Shoggoth.Agda
    Shoggoth.Configuration
    Shoggoth.CSS.Minify
    Shoggoth.CSS.Sass
    Shoggoth.Metadata
    Shoggoth.PostInfo
    Shoggoth.Prelude
    Shoggoth.Prelude.ByteString
    Shoggoth.Routing
    Shoggoth.TagSoup
    Shoggoth.Template.Pandoc
    Shoggoth.Template.Pandoc.Builder
    Shoggoth.Template.Pandoc.Citeproc

  other-modules:
    Shoggoth.Prelude.FilePath
    Shoggoth.Prelude.Url
    Shoggoth.Template.Pandoc.Url

  build-depends:
    , aeson
    , bimap
    , bytestring
    , charsetdetect
    , citeproc
    , containers
    , data-default-class
    , directory
    , doclayout
    , filemanip             ^>=0.3
    , filepath
    , frontmatter
    , hasmin
    , hsass                 >=0.3.0
    , mtl
    , pandoc
    , pandoc-types
    , shake
    , tagsoup
    , text
    , text-icu              ^>=0.7.1.0
    , text-regex-replace
    , time
    , transformers
    , unordered-containers
    , vector
    , yaml

  if flag(install-agda)
    build-depends: Agda ==2.6.2.2
    cpp-options:   -DinstallAgda

-- library shoggoth-agda
--   import:          language-haskell
--   visibility:      public
--   hs-source-dirs:  shoggoth-agda
--   exposed-modules: Shoggoth.Agda
--   build-depends:
--     , containers
--     , directory
--     , mtl
--     , shoggoth
--     , text
--     , text-icu            ^>=0.7.1.0
--     , text-regex-replace

--   if flag(install-agda)
--     build-depends: Agda ==2.6.2.2
--     cpp-options:   -DinstallAgda

-- library shoggoth-hasmin
--   import:          language-haskell
--   visibility:      public
--   hs-source-dirs:  shoggoth-hasmin
--   exposed-modules: Shoggoth.CSS.Minify
--   build-depends:
--     , directory
--     , hasmin
--     , shoggoth
--     , text

-- library shoggoth-hsass
--   import:          language-haskell
--   visibility:      public
--   hs-source-dirs:  shoggoth-hsass
--   exposed-modules: Shoggoth.CSS.Sass
--   build-depends:
--     , directory
--     , hsass      >=0.3.0
--     , shoggoth
--     , text
