cabal-version: 3.0
name:          shoggoth
version:       0.1.0.0
synopsis:      Build static web pages using
homepage:      https://github.com/wenkokke/shoggoth#README
bug-reports:   https://github.com/wenkokke/shoggoth/issues
license:
author:        Wen Kokke
maintainer:    wenkokke@users.noreply.github.com
copyright:     © 2016—2022 Wen Kokke
category:      Web
build-type:    Simple
tested-with:   GHC ==8.10.7

flag with-agda
  description: Use Agda as a library
  manual:      True
  default:     False

common language-haskell
  default-language:   Haskell2010
  build-depends:      base
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImplicitParams
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    Strict
    TupleSections
    TypeApplications
    TypeFamilies
    TypeSynonymInstances

library
  import:          language-haskell
  hs-source-dirs:  shoggoth
  exposed-modules:
    Shoggoth.Configuration
    Shoggoth.Metadata
    Shoggoth.PostInfo
    Shoggoth.Prelude
    Shoggoth.Routing
    Shoggoth.TagSoup
    Shoggoth.Template.Pandoc
    Shoggoth.Template.Pandoc.Builder
    Shoggoth.Template.Pandoc.Citeproc

  other-modules:
    Shoggoth.Prelude.FilePath
    Shoggoth.Prelude.Url
    Shoggoth.Template.Pandoc.Helper

  build-depends:
    , aeson                 ^>=2.0
    , bimap
    , bytestring
    , charsetdetect
    , citeproc
    , containers
    , data-default-class
    , directory
    , doclayout
    , doctemplates
    , filemanip             ^>=0.3
    , filepath
    , frontmatter
    , mtl
    , pandoc
    , pandoc-types
    , shake
    , tagsoup
    , text
    , time
    , transformers
    , unordered-containers
    , vector
    , yaml

  hs-source-dirs:  shoggoth-agda
  exposed-modules: Shoggoth.Agda

  if flag(with-agda)
    build-depends: Agda ==2.6.2.2
    cpp-options:   -DinstallAgda
